@@ -13,9 +13,9 @@
 
 static const UVersionInfo ucase_props_dataVersion={6,3,0,0};
 
-static const int32_t ucase_props_indexes[UCASE_IX_TOP]={0x10,0x58b0,0x4b60,0x516,0x172,0,0,0,0,0,0,0,0,0,0,3};
+static const int32_t ucase_props_indexes[UCASE_IX_TOP]={0x10,0x58c8,0x4b78,0x516,0x172,0,0,0,0,0,0,0,0,0,0,3};
 
-static const uint16_t ucase_props_trieIndex[9640]={
+static const uint16_t ucase_props_trieIndex[9652]={
 0x2d1,0x2d9,0x2e1,0x2e9,0x2f7,0x2ff,0x307,0x30f,0x317,0x31f,0x326,0x32e,0x336,0x33e,0x346,0x34e,
 0x354,0x35c,0x364,0x36c,0x374,0x37c,0x384,0x38c,0x394,0x39c,0x3a4,0x3ac,0x3b4,0x3bc,0x3c4,0x3cc,
 0x3d4,0x3dc,0x3e0,0x3e8,0x3f0,0x3f8,0x400,0x408,0x406,0x40e,0x413,0x41b,0x422,0x42a,0x432,0x43a,
@@ -143,7 +143,7 @@ static const uint16_t ucase_props_trieIndex[9640]={
 0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,
 0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x837,0x2f0,0x2f0,0x2f0,0x2f0,0x83f,0x609,0x2f0,
 0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,
-0x844,0x84c,0x2d8,0x2f0,0x2f0,0x2f0,0x2f0,0x84e,0x854,0x85c,0x864,0x813,0x485,0x2f0,0x2f0,0x86c,
+0x844,0x84c,0x850,0x2f0,0x2f0,0x2f0,0x2f0,0x2d3,0x2d9,0x858,0x860,0x813,0x485,0x2f0,0x2f0,0x868,
 0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,
 0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,
 0xbc4,0xbc4,0xbdc,0xc1c,0xc5c,0xc98,0xcd8,0xd18,0xd50,0xd90,0xdd0,0xe10,0xe50,0xe90,0xed0,0xf10,
@@ -176,29 +176,29 @@ static const uint16_t ucase_props_trieIndex[9640]={
 0x188,0x188,0x188,0x188,0x188,0x188,0x188,0x188,0x188,0x188,0x188,0x188,0x188,0x188,0x188,0x188,
 0xb04,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,
 0x5c5,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,
-0x2f0,0x874,0x87a,0x87e,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,
+0x2f0,0x870,0x876,0x87a,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,
 0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,
-0x2f0,0x886,0x88a,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,
-0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,
-0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,
-0x2f0,0x4cf,0x892,0x899,0x2f0,0x609,0x89d,0x2f0,0x2f0,0x84d,0x8a5,0x2f0,0x2f0,0x609,0x8ab,0x8b3,
+0x2f0,0x882,0x886,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,
 0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,
 0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,
-0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x8b9,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,
+0x2f0,0x4cf,0x88e,0x895,0x2f0,0x609,0x899,0x2f0,0x2f0,0x8a1,0x8a8,0x2f0,0x2f0,0x609,0x8ae,0x8b6,
+0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,
+0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,
+0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x8bc,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,
 0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,
 0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,
 0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,
-0x2f0,0x2f0,0x2f0,0x8bf,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x8c7,
-0x8cf,0x8d5,0x2f0,0x2f0,0x2f0,0x2f0,0x8dd,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,
-0x2f0,0x2f0,0x2f0,0x2f0,0x8e5,0x8ed,0x8f2,0x8f8,0x900,0x908,0x910,0x8e9,0x918,0x920,0x928,0x92f,
-0x8ea,0x8e5,0x8ed,0x8e8,0x8f8,0x8eb,0x8e6,0x937,0x8e9,0x93f,0x947,0x94f,0x956,0x942,0x94a,0x952,
-0x959,0x945,0x961,0x2f0,0x4cf,0x7af,0x7af,0x7af,0x2f0,0x2f0,0x2f0,0x2f0,0x7af,0x7af,0x7af,0x7af,
+0x2f0,0x2f0,0x2f0,0x8c2,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x8ca,
+0x8d2,0x8d8,0x2f0,0x2f0,0x2f0,0x2f0,0x8e0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,
+0x2f0,0x2f0,0x2f0,0x2f0,0x8e8,0x8f0,0x8f5,0x8fb,0x903,0x90b,0x913,0x8ec,0x91b,0x923,0x92b,0x932,
+0x8ed,0x8e8,0x8f0,0x8eb,0x8fb,0x8ee,0x8e9,0x93a,0x8ec,0x942,0x94a,0x952,0x959,0x945,0x94d,0x955,
+0x95c,0x948,0x964,0x2f0,0x4cf,0x7af,0x7af,0x7af,0x2f0,0x2f0,0x2f0,0x2f0,0x7af,0x7af,0x7af,0x7af,
 0x7af,0x7af,0x7af,0x844,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,
 0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,
 0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,0x2f0,
 0x2f0,0x2f0,0x2f0,0x2f0,0,0,0,0,0,0,0,0,0,0,0,0,
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
+0,0,0,0,0,0,0,0,0,0,0,4,0,0,0,0,
 0,0,4,0,0,0,0,0,0,0,0,0,0,0,0,0,
 0,0,0,0,0,0x100a,0x100a,0x100a,0x100a,0x100a,0x100a,0x100a,0x100a,0x1a,0xba,0xfa,
 0x100a,0x100a,0x100a,0x100a,0x100a,0x100a,0x100a,0x17a,0x100a,0x100a,0x100a,0x100a,0x100a,0x100a,0x100a,0,
@@ -549,8 +549,7 @@ static const uint16_t ucase_props_trieIndex[9640]={
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
 0x44,0x44,0x44,0x44,0x44,0x44,0x44,0,0,0,0,0,0,0,0,0,
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
-0,0,0,0,0,0,0,4,0,0,0,0,0,0,4,0,
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
+0,0,4,0,0,0,0,0,0,0,0,0,0,0,0,0,
 0,0x100a,0x100a,0x100a,0x100a,0x100a,0x100a,0x100a,0x100a,0x100a,0x100a,0x100a,0x100a,0x100a,0x100a,0x100a,
 0x100a,0x100a,0x100a,0x100a,0x100a,0x100a,0x100a,0x100a,0x100a,0x100a,0x100a,0,0,0,4,0,
 4,0xf009,0xf009,0xf009,0xf009,0xf009,0xf009,0xf009,0xf009,0xf009,0xf009,0xf009,0xf009,0xf009,0xf009,0xf009,
@@ -569,56 +568,58 @@ static const uint16_t ucase_props_trieIndex[9640]={
 4,4,4,4,4,4,4,4,4,4,0x64,0,0,0,0,0,
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
 0,0,0,0,0,0,0,4,4,4,4,0,0,0x64,0x64,0,
-0,4,0,0,0,0,0,0,0,0,0,4,4,4,4,4,
-0,4,4,4,4,4,4,0x64,0x64,0,0,0,0,0,0,0,
+0,4,0,0,0x44,0x44,0x44,0,0,0,0,0,0,0,0,0,
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
-0,0,4,4,4,4,4,4,4,4,4,0,0x60,0,0,0,
+0,0,0,0,0,0,0,4,4,4,4,4,0,4,4,4,
+4,4,4,0x64,0x64,0,0,0,0,0,0,0,0,0,0,0,
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,4,4,
+4,4,4,4,4,4,4,0,0x60,0,0,0,0,0,0,0,
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,4,
-0,4,0,0,4,4,4,4,4,4,0x60,0x64,0,0,0,0,
-0,0,0,0,0,0,0,0,0,0,0,4,4,4,4,4,
-4,4,4,4,4,4,4,4,4,4,4,4,0,0,0,0,
-0,0x60,0x60,0x64,0x64,0x64,0,0,0,0x60,0x60,0x60,0x60,0x60,0x60,4,
-4,4,4,4,4,4,4,0x64,0x64,0x64,0x64,0x64,0x64,0x64,0x64,0,
-0,0x44,0x44,0x44,0x44,0x44,0x64,0x64,0,0,0,0,0,0,0,0,
-0,0,0,0,0,0,0,0,0,0,0,0,0,0,0x44,0x44,
-0x44,0x44,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
-0,0,0,0,0,0,0x44,0x44,0x44,0,0,0,0,0,0,0,
+0,0,0,0,0,0,0,0,0,0,0,4,0,4,0,0,
+4,4,4,4,4,4,0x60,0x64,0,0,0,0,0,0,0,0,
+0,0,0,0,0,0,0,4,4,4,4,4,4,4,4,4,
+4,4,4,4,4,4,4,4,0,0,0,0,0,0x60,0x60,0x64,
+0x64,0x64,0,0,0,0x60,0x60,0x60,0x60,0x60,0x60,4,4,4,4,4,
+4,4,4,0x64,0x64,0x64,0x64,0x64,0x64,0x64,0x64,0,0,0x44,0x44,0x44,
+0x44,0x44,0x64,0x64,0,0,0,0,0,0,0,0,0,0,0,0,
+0,0,0,0,0,0,0,0,0,0,0x44,0x44,0x44,0x44,0,0,
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
-0,0,0,0,2,2,2,2,2,2,2,2,2,2,2,2,
+0,0,0x44,0x44,0x44,0,0,0,0,0,0,0,0,0,0,0,
+0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
+2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,
+2,2,2,2,2,2,2,2,2,2,1,1,1,1,1,1,
+1,1,0x21,0x21,1,1,1,1,1,1,1,1,1,1,1,1,
+1,1,1,1,2,2,2,2,2,2,2,2,2,2,2,2,
+2,2,1,1,1,1,1,1,1,0,0x21,0x21,1,1,1,1,
+1,1,1,1,2,2,2,2,2,2,2,2,2,2,2,2,
 2,2,2,2,2,2,2,2,2,2,2,2,2,2,1,1,
 1,1,1,1,1,1,0x21,0x21,1,1,1,1,1,1,1,1,
-1,1,1,1,1,1,1,1,2,2,2,2,2,2,2,2,
-2,2,2,2,2,2,1,1,1,1,1,1,1,0,0x21,0x21,
-1,1,1,1,1,1,1,1,2,2,2,2,2,2,2,2,
-2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,
-2,2,1,1,1,1,1,1,1,1,0x21,0x21,1,1,1,1,
-1,1,1,1,1,1,1,1,1,1,1,1,2,0,2,2,
-0,0,2,0,0,2,2,0,0,2,2,2,2,0,2,2,
-2,2,2,2,2,2,1,1,1,1,0,1,0,1,0x21,0x21,
-1,1,1,1,0,1,1,1,1,1,1,1,1,1,1,1,
-2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,
-1,1,1,1,2,2,0,2,2,2,2,0,0,2,2,2,
-2,2,2,2,2,0,2,2,2,2,2,2,2,0,1,1,
+1,1,1,1,1,1,1,1,2,0,2,2,0,0,2,0,
+0,2,2,0,0,2,2,2,2,0,2,2,2,2,2,2,
+2,2,1,1,1,1,0,1,0,1,0x21,0x21,1,1,1,1,
+0,1,1,1,1,1,1,1,1,1,1,1,2,2,2,2,
+2,2,2,2,2,2,2,2,2,2,2,2,1,1,1,1,
+2,2,0,2,2,2,2,0,0,2,2,2,2,2,2,2,
+2,0,2,2,2,2,2,2,2,0,1,1,1,1,1,1,
+1,1,0x21,0x21,1,1,1,1,1,1,1,1,1,1,1,1,
+1,1,1,1,2,2,0,2,2,2,2,0,2,2,2,2,
+2,0,2,0,0,0,2,2,2,2,2,2,2,0,1,1,
 1,1,1,1,1,1,0x21,0x21,1,1,1,1,1,1,1,1,
-1,1,1,1,1,1,1,1,2,2,0,2,2,2,2,0,
-2,2,2,2,2,0,2,0,0,0,2,2,2,2,2,2,
-2,0,1,1,1,1,1,1,1,1,0x21,0x21,1,1,1,1,
-1,1,1,1,1,1,1,1,2,2,2,2,2,2,2,2,
-2,2,2,2,2,2,2,2,2,2,2,2,1,1,1,1,
-1,1,1,1,1,1,1,1,1,1,1,1,2,2,2,2,
-2,2,2,2,2,2,2,2,2,2,2,2,1,1,1,1,
-1,1,0,0,2,2,2,2,2,2,2,2,2,2,2,2,
-2,2,2,2,2,2,2,2,2,2,2,2,2,0,1,1,
-1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,
-1,1,1,1,1,1,1,0,1,1,1,1,1,1,2,2,
-2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,
-2,2,2,2,2,2,2,0,1,1,1,1,1,1,1,1,
-1,1,1,1,1,1,1,1,1,1,1,1,1,0,1,1,
 1,1,1,1,2,2,2,2,2,2,2,2,2,2,2,2,
-2,2,2,2,1,1,1,0,1,1,1,1,1,1,2,1,
+2,2,2,2,2,2,2,2,1,1,1,1,1,1,1,1,
+1,1,1,1,1,1,1,1,2,2,2,2,2,2,2,2,
+2,2,2,2,2,2,2,2,1,1,1,1,1,1,0,0,
+2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,
+2,2,2,2,2,2,2,2,2,0,1,1,1,1,1,1,
+1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,
+1,1,1,0,1,1,1,1,1,1,2,2,2,2,2,2,
+2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,
+2,2,2,0,1,1,1,1,1,1,1,1,1,1,1,1,
+1,1,1,1,1,1,1,1,1,0,1,1,1,1,1,1,
+2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,
+1,1,1,0,1,1,1,1,1,1,2,1,0,0,0,0,
 0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
-0,0,0,0,0,0,0,0
+0,0,0,0
 };
 
 static const uint16_t ucase_props_exceptions[1302]={
@@ -743,13 +744,13 @@ static const UCaseProps ucase_props_singleton={
     ucase_props_trieIndex+2884,
     NULL,
     2884,
-    6756,
+    6768,
     0x188,
     0xbc0,
     0x0,
     0x0,
     0xe0800,
-    0x25a4,
+    0x25b0,
     NULL, 0, FALSE, FALSE, 0, NULL
   },
   { 3,0,0,0 }
